--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -158,8 +158,27 @@ RSpec/ExampleLength:
   Exclude:
     - 'spec/features/admin_spec.rb'
     - 'spec/features/batch_create_spec.rb'
+    - 'spec/features/batch_edit_spec.rb'
     - 'spec/features/browse_dashboard_works_spec.rb'
     - 'spec/features/browse_catalog_spec.rb'
     - 'spec/features/collection_spec.rb'
+    - 'spec/features/create_child_work_spec.rb'
     - 'spec/features/create_work_spec.rb'
     - 'spec/features/edit_work_spec.rb'
+    - 'spec/features/embargo_spec.rb'
+    - 'spec/features/lease_spec.rb'
+    - 'spec/features/notifications_spec.rb'
+    - 'spec/features/ownership_transfer_spec.rb'
+    - 'spec/features/proxy_spec.rb'
+    - 'spec/features/search_spec.rb'
+    - 'spec/features/work_show_spec.rb'
+    - 'spec/features/workflow_state_changes_spec.rb'
+    - 'spec/features/users_spec.rb'
+
+RSpec/ExpectInHook:
+  Exclude:
+    - 'spec/features/ownership_transfer_spec.rb'
+
+RSpec/VerifiedDoubles:
+  Exclude:
+    - 'spec/features/create_child_work_spec.rb'
