Copy catalog_search_spec and contact_form_spec from Hyrax

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -161,7 +161,9 @@ RSpec/ExampleLength:
     - 'spec/features/batch_edit_spec.rb'
     - 'spec/features/browse_dashboard_works_spec.rb'
     - 'spec/features/browse_catalog_spec.rb'
+    - 'spec/features/catalog_search_spec.rb'
     - 'spec/features/collection_spec.rb'
+    - 'spec/features/contact_form_spec.rb'
     - 'spec/features/create_child_work_spec.rb'
     - 'spec/features/create_work_spec.rb'
     - 'spec/features/edit_work_spec.rb'
