Copy new and modified Hyrax feature specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -177,10 +177,14 @@ RSpec/ExampleLength:
     - 'spec/features/browse_dashboard_works_spec.rb'
     - 'spec/features/browse_catalog_spec.rb'
     - 'spec/features/catalog_search_spec.rb'
+    - 'spec/features/collection_multi_membership_spec.rb'
     - 'spec/features/collection_spec.rb'
+    - 'spec/features/collection_type_spec.rb'
     - 'spec/features/contact_form_spec.rb'
     - 'spec/features/create_child_work_spec.rb'
     - 'spec/features/create_work_spec.rb'
+    - 'spec/features/dashboard/collection_spec.rb'
+    - 'spec/features/dashboard/display_dashboard_spec.rb'
     - 'spec/features/edit_work_spec.rb'
     - 'spec/features/embargo_spec.rb'
     - 'spec/features/lease_spec.rb'
