Update to Hyrax gem version 2.1.0.rc1
Includes updated feature specs to match changes in Hyrax

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -192,8 +192,11 @@ RSpec/ExampleLength:
     - 'spec/features/create_child_work_spec.rb'
     - 'spec/features/create_work_spec.rb'
     - 'spec/features/create_work_admin_spec.rb'
+    - 'spec/features/dashboard/all_works.rb'
     - 'spec/features/dashboard/collection_spec.rb'
     - 'spec/features/dashboard/display_dashboard_spec.rb'
+    - 'spec/features/display_admin_dashboard_spec.rb'
+    - 'spec/features/edit_content_block_admin_spec.rb'
     - 'spec/features/edit_work_spec.rb'
     - 'spec/features/embargo_spec.rb'
     - 'spec/features/lease_spec.rb'
