--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,10 @@ Metrics/PerceivedComplexity:
 Metrics/MethodLength:
   Exclude:
     - 'app/controllers/classify_concerns_controller.rb'
+Metrics/ClassLength:
+  Exclude:
+    - 'app/presenters/hyrax/collection_presenter.rb'
+    - 'app/controllers/catalog_controller.rb'
 
 Rails/ApplicationJob:
   Enabled: false
