--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,14 @@ Metrics/BlockLength:
     - 'lib/tasks/*.rake'
     - 'spec/**/*.rb'
 
+Metrics/PerceivedComplexity:
+  Exclude:
+    - 'app/models/ability.rb'
+
+Metrics/MethodLength:
+  Exclude:
+    - 'app/controllers/classify_concerns_controller.rb'
+
 Rails/ApplicationJob:
   Enabled: false
 
