--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -106,6 +106,7 @@ RSpec/ExampleLength:
     - 'spec/features/create_article_spec.rb'
     - 'spec/views/static/help.html.erb_spec.rb'
     - 'spec/controllers/hyrax/file_sets_controller_spec.rb'
+    - 'spec/views/_user_util_links.html.erb_spec.rb'
 
 RSpec/ExpectActual:
   Enabled: false
