--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,9 +73,11 @@ RSpec/ExampleLength:
     - 'spec/features/hyrax/browse_catalog_spec.rb'
     - 'spec/features/hyrax/catalog_search_spec.rb'
     - 'spec/features/collection_export_spec.rb'
+    - 'spec/features/concern_show_spec.rb'
     - 'spec/features/hyrax/collection_multi_membership_spec.rb'
     - 'spec/features/hyrax/collection_spec.rb'
     - 'spec/features/hyrax/collection_type_spec.rb'
+    - 'spec/features/hyrax/concern_show_spec.rb'
     - 'spec/features/hyrax/contact_form_spec.rb'
     - 'spec/features/hyrax/create_child_work_spec.rb'
     - 'spec/features/hyrax/create_work_spec.rb'
