--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ fits.log
 # Ignore uploaded avatars and banners
 public/branding/*
 public/system/avatars/*
+
+* Ignore dotenv config files
+.env.development.local
+.env.test.local
+.env.production.local
