--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,39 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+<%
+  socket = [
+  ENV["BOXEN_MYSQL_SOCKET"],
+  "/var/run/mysql5/mysqld.sock",
+  "/tmp/mysql.sock"
+  ].detect { |f| f && File.exist?(f) }
+
+  port = ENV["SCHOLAR_DATABASE_PORT"]
+%>
+
+mysql_connection: &mysql_connection
+<% if socket %>
+  host: <%= ENV["SCHOLAR_DATABASE_HOST"] %>
+  socket: <%= socket %>
+<% else %>
+  host: 127.0.0.1
+  port: <%= port %>
+<% end %>
+
+database_settings: &database_settings
+  <<: *mysql_connection
+  adapter:   <%= ENV["SCHOLAR_DATABASE_ADAPTER"] %>
+  pool:      <%= ENV["SCHOLAR_DATABASE_POOL"] %>
+  username:  <%= ENV["SCHOLAR_DATABASE_USERNAME"] %>
+  password:  <%= ENV["SCHOLAR_DATABASE_PASSWORD"] %>
+  database:  <%= ENV["SCHOLAR_DATABASE_NAME"] %>
+  host:      <%= ENV["SCHOLAR_DATABASE_HOST"] %>
+  timeout:   <%= ENV["SCHOLAR_DATABASE_TIMEOUT"] %>
+  encoding:  utf8
+  RECONNECT: FALSE
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *database_settings
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
-  timeout: 30000
+  <<: *database_settings
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *database_settings
