--- a/config/fedora.yml
+++ b/config/fedora.yml
@@ -1,15 +1,15 @@
 development:
   user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:<%= ENV['FCREPO_DEVELOPMENT_PORT'] || 8984 %>/rest
+  password: <%= ENV["SCHOLAR_FEDORA_PASSWORD"] %>
+  url: <%= ENV["SCHOLAR_FEDORA_URL"] %>
   base_path: /dev
 test:
   user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:<%= ENV['FCREPO_TEST_PORT'] || 8986 %>/rest
+  password: <%= ENV["SCHOLAR_FEDORA_PASSWORD"] %>
+  url: <%= ENV["SCHOLAR_FEDORA_URL"] %>
   base_path: /test
 production:
   user: fedoraAdmin
-  password: fedoraAdmin
-  url: http://127.0.0.1:8983/fedora/rest
+  password: <%= ENV["SCHOLAR_FEDORA_PASSWORD"] %>
+  url: <%= ENV["SCHOLAR_FEDORA_URL"] %>
   base_path: /prod
