--- a/config/authorities/licenses.yml
+++ b/config/authorities/licenses.yml
@@ -1,46 +1,37 @@
 terms:
-    - id: http://creativecommons.org/licenses/by/3.0/us/
-      term: Attribution 3.0 United States
-      active: false
-    - id: http://creativecommons.org/licenses/by-sa/3.0/us/
-      term: Attribution-ShareAlike 3.0 United States
-      active: false
-    - id: http://creativecommons.org/licenses/by-nc/3.0/us/
-      term: Attribution-NonCommercial 3.0 United States
-      active: false
-    - id: http://creativecommons.org/licenses/by-nd/3.0/us/
-      term: Attribution-NoDerivs 3.0 United States
-      active: false
-    - id: http://creativecommons.org/licenses/by-nc-nd/3.0/us/
-      term: Attribution-NonCommercial-NoDerivs 3.0 United States
-      active: false
-    - id: http://creativecommons.org/licenses/by-nc-sa/3.0/us/
-      term: Attribution-NonCommercial-ShareAlike 3.0 United States
-      active: false
-    - id: http://www.europeana.eu/portal/rights/rr-r.html
+    - id: http://rightsstatements.org/vocab/InC/1.0/
       term: All rights reserved
-      active: false
-    - id: https://creativecommons.org/licenses/by/4.0/
-      term: Creative Commons BY Attribution 4.0 International
       active: true
-    - id: https://creativecommons.org/licenses/by-sa/4.0/
-      term: Creative Commons BY-SA Attribution-ShareAlike 4.0 International
+    - id: http://creativecommons.org/licenses/by/4.0/
+      term: Attribution 4.0 International
       active: true
-    - id: https://creativecommons.org/licenses/by-nd/4.0/
-      term: Creative Commons BY-ND Attribution-NoDerivatives 4.0 International
+    - id: http://creativecommons.org/licenses/by-sa/4.0/
+      term: Attribution-ShareAlike 4.0 International
       active: true
-    - id: https://creativecommons.org/licenses/by-nc/4.0/
-      term: Creative Commons BY-NC Attribution-NonCommercial 4.0 International
+    - id: http://creativecommons.org/licenses/by-nc/4.0/
+      term: Attribution-NonCommercial 4.0 International
       active: true
-    - id: https://creativecommons.org/licenses/by-nc-nd/4.0/
-      term: Creative Commons BY-NC-ND Attribution-NonCommercial-NoDerivs 4.0 International
+    - id: http://creativecommons.org/licenses/by-nd/4.0/
+      term: Attribution-NoDerivs 4.0 International
       active: true
-    - id: https://creativecommons.org/licenses/by-nc-sa/4.0/
-      term: Creative Commons BY-NC-SA Attribution-NonCommercial-ShareAlike 4.0 International
+    - id: http://creativecommons.org/licenses/by-nc-nd/4.0/
+      term: Attribution-NonCommercial-NoDerivs 4.0 International
       active: true
-    - id: http://creativecommons.org/publicdomain/zero/1.0/
-      term: Creative Commons CC0 1.0 Universal
+    - id: http://creativecommons.org/licenses/by-nc-sa/4.0/
+      term: Attribution-NonCommercial-ShareAlike 4.0 International
       active: true
     - id: http://creativecommons.org/publicdomain/mark/1.0/
-      term: Creative Commons Public Domain Mark 1.0
+      term: Public Domain Mark 1.0
+      active: true
+    - id: http://creativecommons.org/publicdomain/zero/1.0/
+      term: CC0 1.0 Universal
+      active: true
+    - id: http://www.opendatacommons.org/licenses/pddl/1.0/
+      term: Open Data Commons Public Domain Dedication and License (PDDL)
+      active: true
+    - id: http://www.opendatacommons.org/licenses/by/1.0/
+      term: Open Data Commons Attribution License (ODC-By)
+      active: true
+    - id: http://opendatacommons.org/licenses/dbcl/1.0/
+      term: Open Data Commons Open Database License (ODbL)
       active: true
