delete the double quote if the description or note ends in double quote.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -118,6 +118,8 @@ RSpec/ExampleLength:
     - 'spec/forms/hyrax/batch_edit_form_spec.rb'
     - 'spec/jobs/batch_create_job_spec.rb'
     - 'spec/controllers/hyrax/batch_uploads_controller_spec.rb'
+    - 'spec/features/create_work_with_fields_spec.rb'
+    - 'spec/controllers/hyrax/generic_works_controller_spec.rb'
 
 RSpec/ExpectActual:
   Enabled: false
@@ -168,6 +170,7 @@ Style/SymbolArray:
 Metrics/AbcSize:
   Exclude:
     - 'app/models/ability.rb'
+    - 'app/controllers/concerns/hyrax/works_controller_behavior.rb'
 
 Metrics/CyclomaticComplexity:
   Exclude:
