Allows for sorting and reverse sorting alphabetically.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,9 @@ Metrics/MethodLength:
     - 'app/controllers/classify_concerns_controller.rb'
     - 'app/services/works_report.rb'
     - 'app/forms/hyrax/forms/batch_upload_form.rb'
+    - 'spec/support/hyrax/factory_helpers.rb'
+    - 'app/indexers/hyrax/file_set_indexer.rb'
+    - 'spec/support/hyrax/helpers/factory_helpers.rb'
 
 Metrics/ClassLength:
   Exclude:
@@ -152,6 +155,11 @@ RSpec/VerifiedDoubles:
     - 'spec/views/hyrax/dashboard/collections/_show_actions.html.erb_spec.rb'
     - 'spec/helpers/hyrax_helper_spec.rb'
 
+RSpec/NamedSubject:
+  Exclude:
+    - 'spec/indexers/hyrax/collection_indexer_spec.rb'
+    - 'spec/indexers/hyrax/file_set_indexer_spec.rb'
+
 Style/ClassAndModuleChildren:
   Enabled: false
 
@@ -168,6 +176,10 @@ Style/SymbolArray:
 Metrics/AbcSize:
   Exclude:
     - 'app/models/ability.rb'
+    - 'app/indexers/hyrax/file_set_indexer.rb'
+    - 'app/indexers/hyrax/work_indexer.rb'
+    - 'app/models/ability.rb'
+    - 'app/indexers/hyrax/collection_indexer.rb'
 
 Metrics/CyclomaticComplexity:
   Exclude:
