Configures facets to display the same as Scholar.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -122,6 +122,7 @@ RSpec/ExampleLength:
     - 'spec/jobs/batch_create_job_spec.rb'
     - 'spec/controllers/hyrax/batch_uploads_controller_spec.rb'
     - 'spec/features/create_collection_spec.rb'
+    - 'spec/features/catalog_facet_spec.rb'
 
 RSpec/ExpectActual:
   Enabled: false
@@ -173,6 +174,10 @@ Style/SingleLineBlockParams:
 
 Style/SymbolArray:
   Enabled: false
+
+Style/GuardClause:
+  Exclude:
+    - 'app/indexers/hyrax/work_indexer.rb'
 
 Metrics/AbcSize:
   Exclude:
