--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,7 @@ RSpec/AnyInstance:
   Exclude:
     - 'spec/controllers/hyrax/contact_form_controller_spec.rb'
     - 'spec/controllers/collection_exports_controller_spec.rb'
+    - 'spec/models/job_io_wrapper_spec.rb'
 
 RSpec/DescribeClass:
   Exclude:
@@ -144,6 +145,7 @@ RSpec/MessageExpectation:
 # # By default RSpec/MessageSpies has the following:
 # #   Prefer have_received for setting message expectations. Setup form as a spy using allow or instance_spy.
 # # The default assumes EnforcedStyle is 'have_received'. Most of our specs are 'receive'
+
 RSpec/MessageSpies:
   Enabled: false
 
@@ -167,6 +169,7 @@ RSpec/NamedSubject:
   Exclude:
     - 'spec/indexers/hyrax/collection_indexer_spec.rb'
     - 'spec/indexers/hyrax/file_set_indexer_spec.rb'
+    - 'spec/models/job_io_wrapper_spec.rb'
 
 Style/ClassAndModuleChildren:
   Enabled: false
