Implement DOI minting

--- a/.env.development
+++ b/.env.development
@@ -57,3 +57,9 @@ SCHOLAR_RIIIF_CACHE=/tmp/riiif
 SCHOLAR_SOFFICE_PATH=soffice
 SCHOLAR_SOLR_URL=http://127.0.0.1:8983/solr/hydra-development
 SCHOLAR_UPLOAD_PATH=/tmp/uploads
+
+# DOI
+SCHOLAR_DOI_USERNAME=apitest
+SCHOLAR_DOI_PASSWORD=apitest
+SCHOLAR_DOI_SHOULDER=doi:10.5072/FK2
+SCHOLAR_DOI_URL=https://ezid.cdlib.org
