Enhances collections export feature.

--- a/config/metadata_export_map.yml
+++ b/config/metadata_export_map.yml
@@ -2,4 +2,167 @@ GenericWork:
   - id
   - title
   - creator
+  - depositor
   - description
+  - college
+  - department
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Article:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - journal_title
+  - issn
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Document:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - genre
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Dataset:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - required_software
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - note
+  - related_url
+Image:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - genre
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Medium:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - license
+  - publisher
+  - date_created
+  - alternate_title
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Etd:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - advisor
+  - license
+  - committee_member
+  - degree
+  - date_created
+  - etd_publisher
+  - alternate_title
+  - genre
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+StudentWork:
+  - id
+  - title
+  - creator
+  - depositor
+  - description
+  - college
+  - department
+  - advisor
+  - license
+  - degree
+  - publisher
+  - date_created
+  - alternate_title
+  - genre
+  - subject
+  - geo_subject
+  - time_period
+  - language
+  - required_software
+  - note
+  - related_url
+Collection:
+  - id
+  - title
+  - creator
+  - depositor
