--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -202,6 +202,7 @@ RSpec/VerifiedDoubles:
     - 'spec/jobs/identifier_delete_job_spec.rb'
     - 'spec/services/hyrax/default_middleware_stack_spec.rb'
     - 'spec/jobs/attach_files_to_work_job_spec.rb'
+    - 'spec/models/collection_spec.rb'
     
 RSpec/NamedSubject:
   Exclude:
@@ -214,6 +215,7 @@ RSpec/NamedSubject:
     - 'spec/services/hyrax/default_middleware_stack_spec.rb'
     - 'spec/models/work_and_file_index_spec.rb'
     - 'spec/services/hyrax/custom_stat_importer_spec.rb'
+    - 'spec/models/collection_spec.rb'
 
 Style/ClassAndModuleChildren:
   Enabled: false
