--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -217,6 +217,10 @@ RSpec/NamedSubject:
     - 'spec/services/hyrax/custom_stat_importer_spec.rb'
     - 'spec/models/collection_spec.rb'
 
+Style/FrozenStringLiteralComment:
+  Exclude:
+    - 'app/renderers/hyrax/renderers/attribute_renderer.rb'
+
 Style/ClassAndModuleChildren:
   Enabled: false
 
@@ -277,3 +281,4 @@ Lint/RescueException:
 Rails/OutputSafety:
   Exclude:
     - 'app/helpers/hyrax_helper.rb'
+    - 'app/renderers/hyrax/renderers/attribute_renderer.rb'
