--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ env:
   # rails does not follow sem-ver conventions, see http://guides.rubyonrails.org/maintenance_policy.html
   # It should be sufficient to test only the latest of the patch versions for a minor version, they
   # should be compatible across patch versions (only bug fixes are released in patch versions).
-
+  matrix:
+    - SPEC_GROUP=1
+    - SPEC_GROUP=0
 
 script:
   - bundle exec rake ci
