Delete draft dois.

--- a/.env.development
+++ b/.env.development
@@ -60,7 +60,7 @@ SCHOLAR_SOLR_URL=http://127.0.0.1:8983/solr/hydra-development
 SCHOLAR_UPLOAD_PATH=/tmp/uploads
 
 # DOI
-SCHOLAR_DOI_USERNAME=apitest
-SCHOLAR_DOI_PASSWORD=apitest
-SCHOLAR_DOI_SHOULDER=doi:10.5072/FK2
-SCHOLAR_DOI_URL=https://ezid.cdlib.org
+SCHOLAR_DOI_USERNAME=CIN.TEST
+SCHOLAR_DOI_PASSWORD=api.test.password
+SCHOLAR_DOI_SHOULDER=10.23676
+SCHOLAR_DOI_URL=https://api.test.datacite.org/dois
