--- a/.env.development
+++ b/.env.development
@@ -61,6 +61,6 @@ SCHOLAR_UPLOAD_PATH=/tmp/uploads
 
 # DOI
 SCHOLAR_DOI_USERNAME=CIN.TEST
-SCHOLAR_DOI_PASSWORD=api.test.password
+SCHOLAR_DOI_PASSWORD=ox6iQPX2tWcveNoUfM3qdf82aoeP
 SCHOLAR_DOI_SHOULDER=10.23676
 SCHOLAR_DOI_URL=https://api.test.datacite.org/dois
