--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
   - gem install chromedriver-helper -v 1.2.0
   - google-chrome-stable --headless --disable-gpu --no-sandbox --remote-debugging-port=9222 http://localhost &
 
+install: bundle install --jobs=3 --retry=3 --path=${BUNDLE_PATH:-vendor/bundle} --without production
+
 rvm:
   - 2.5.3
 
