--- a/.env.test
+++ b/.env.test
@@ -64,3 +64,6 @@ SCHOLAR_DOI_USERNAME=apitest
 SCHOLAR_DOI_PASSWORD=apitest
 SCHOLAR_DOI_SHOULDER=doi:10.5072/FK2
 SCHOLAR_DOI_URL=https://ezid.cdlib.org
+
+# API
+API_KEY={ :development => 'testKey'}
