--- a/.env.development
+++ b/.env.development
@@ -64,3 +64,6 @@ SCHOLAR_DOI_USERNAME=apitest
 SCHOLAR_DOI_PASSWORD=apitest
 SCHOLAR_DOI_SHOULDER=10.23676
 SCHOLAR_DOI_URL=https://api.test.datacite.org/dois
+
+# API
+API_KEY={ :development => 'scholarDEV' }
