Create fixity checking task

--- a/.env.test
+++ b/.env.test
@@ -28,6 +28,10 @@ SCHOLAR_DATABASE_USERNAME=
 # Devise
 SCHOLAR_DEVISE_KEY=devise_secret_key
 
+# Fixity
+FIXITY_MAX_DAYS=-1
+FIXITY_NOTIFY_EMAIL=admin@example.com
+
 # Google Analytics
 SCHOLAR_ANALYTICS_TOGGLE=false
 SCHOLAR_ANALYTICS_ID=analytics_id
