Updates Hyrax to version 2.6.0 and BrowseEverything to version 1.0.0

--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,11 @@ SCHOLAR_BROWSE_EVERYTHING_BOX_ID=box_id
 SCHOLAR_BROWSE_EVERYTHING_BOX_SECRET=box_secret
 SCHOLAR_BROWSE_EVERYTHING_KALTURA_ID=kaltura_id
 SCHOLAR_BROWSE_EVERYTHING_KALTURA_SECRET=kaltura_secret
+SCHOLAR_BROWSE_EVERYTHING_DROPBOX_ID=dropbox_id
+SCHOLAR_BROWSE_EVERYTHING_DROPBOX_SECRET=dropbox_secret                        
+SCHOLAR_BROWSE_EVERYTHING_GOOGLE_ID=google_id
+SCHOLAR_BROWSE_EVERYTHING_GOOGLE_SECRET=google_secret
+
 
 # Database settings
 SCHOLAR_DATABASE_ADAPTER=sqlite3
