[WIP] Highlight search terms

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -321,7 +321,12 @@ Lint/HandleExceptions:
     - 'spec/features/doi_validation_spec.rb'
 
 RSpec/SubjectStub:
-  Enabled: false    
+  Enabled: false
+
+RSpec/MessageChain:
+  Exclude:
+    - 'spec/views/catalog/_index_list_default.html.erb_spec.rb'
+    - 'spec/views/catalog/_index_header_list_default.html.erb_spec.rb'  
 
 Lint/RescueException:
   Exclude:
@@ -330,4 +335,5 @@ Lint/RescueException:
 Rails/OutputSafety:
   Exclude:
     - 'app/helpers/hyrax_helper.rb'
+    - 'app/helpers/mark_helper.rb'
     - 'app/renderers/hyrax/renderers/attribute_renderer.rb'
